# rpim

./: .dockerignore  .env.iran.example  .env.us.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  PROMPTS.md  README.md  docker-compose.iran.yml  docker-compose.us.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: blueprint-reviewer.md  explorer.md  test-writer.md
.github/: dependabot.yml
.github/workflows/: ci.yml  coolify-provision.yml  eval-t2.yml  ops-diagnose.yml
apps/core-api/: Dockerfile  alembic.ini  pyproject.toml
apps/core-api/migrations/: env.py
apps/core-api/migrations/versions/: 0001_identity_tenancy.py  0002_onboarding_interview.py  0003_brain_sources_chunks.py  0004_pgvector_embedding.py  0005_content_apprentice.py  0006_qa_governance.py  0007_publish_jobs.py  0008_publish_landing_url.py  0009_publish_image_spec.py  0010_crm_lead_syncs.py  0011_trend_items.py  0012_visual_prompts.py  0013_channel_connections.py  0014_ai_news_items.py  0015_brand_knowledge_kinds.py  0016_media_assets.py  0017_metrics_and_learnings.py  0018_agent_watchdog.py  0019_rbac_and_invites.py  0020_analytics_cursors.py
apps/core-api/rpim_core_api/: db.py  deps.py  main.py  models.py  schemas.py  security.py  vault.py
apps/core-api/rpim_core_api/brain/: chunking.py  crawler.py  embed_client.py  retrieval.py  service.py  vector_type.py
apps/core-api/rpim_core_api/content/: complete_client.py  service.py
apps/core-api/rpim_core_api/crm/: bridge.py
apps/core-api/rpim_core_api/data/: onboarding_fa.json
apps/core-api/rpim_core_api/measurement/: analytics_providers.py  attribution.py  clicks.py  distiller.py  ledger_client.py  utm.py
apps/core-api/rpim_core_api/media/: service.py
apps/core-api/rpim_core_api/publisher/: channels.py  engine.py  renderer_client.py  tenant_creds.py
apps/core-api/rpim_core_api/qa/: checks.py  governance.py  sensitive_fa.json
apps/core-api/rpim_core_api/routers/: admin_panel.py  agent.py  auth.py  brain.py  brand_profile.py  channels_hub.py  content.py  crm.py  export.py  learnings.py  metrics.py  onboarding.py  publish.py  qa_governance.py  reports.py  studio.py  trends.py
apps/core-api/rpim_core_api/studio/: expander.py
apps/core-api/rpim_core_api/trends/: ai_news.py  feeds.py  radar.py
apps/core-api/tests/: conftest.py  test_dod_seven_asset_batch.py  test_m0_core_api_health.py  test_m10_backup_restore.py  test_m10_export.py  test_m10_kill_drill.py  test_m10_killswitch.py  test_m10_ops_assets.py  test_m10_runbook.py  test_m10_silence_event.py  test_m11_export.py  test_m12_image_publish.py  test_m13_crm_leads.py  test_m14_trends.py  test_m15_prompt_studio.py  test_m16_channel_hub.py  test_m16b_tenant_creds.py  test_m18_super_admin.py  test_m19_ai_news.py  test_m19_live_radar.py  test_m1_identity_tenancy.py  test_m1_onboarding.py  test_m20_brand_brain.py  test_m21_media_assets.py  test_m21_wp_deadletter.py  test_m22_metrics_snapshot.py  test_m22b_analytics_ingest.py  test_m22c_distiller.py  test_m22d_export_v4_umami_provider.py  test_m22e_insights.py  test_m23_watchdog.py  test_m23b_agent_surfaces.py  test_m24_rbac.py  test_m24_vault_v2.py  test_m2_brain.py  test_m2_chunking.py  test_m2_crawl.py  test_m2_pdf.py  test_m2b_vector_type.py  test_m4_content.py  (+9 more)
apps/dashboard/: Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.mjs
apps/embeddings/: Dockerfile  pyproject.toml
apps/embeddings/rpim_embeddings/: main.py
apps/embeddings/tests/: test_m2b_embeddings_service.py
apps/model-gateway/: Dockerfile  pyproject.toml
apps/model-gateway/rpim_model_gateway/: idempotency.py  image_providers.py  ledger.py  main.py  providers.py  telegram.py
apps/model-gateway/tests/: test_eval_prompts.py  test_m0_gateway_health.py  test_m12b_telegram_photo.py  test_m16b_gateway_token.py  test_m17_openai_compat.py  test_m21_image_gateway.py  test_m2_embed.py  test_m2b_embed_forward.py  test_m3_complete.py  test_m7b_publish_telegram.py  test_t2_gemini_thinking.py
apps/renderer/: Dockerfile  pyproject.toml
apps/renderer/rpim_renderer/: chromium.py  main.py  rendering.py  templates.py
apps/renderer/tests/: test_m8_render.py  test_m8b_deploy_wiring.py  test_m8b_live_render.py
apps/workers/: Dockerfile  pyproject.toml
apps/workers/rpim_workers/: celery_app.py  tasks.py
apps/workers/tests/: test_m0_ping.py  test_m19_ai_news_beat.py  test_m22_metrics_beat.py  test_m22b_ingest_beat.py  test_m22c_distill_beat.py  test_m23_agent_scan_beat.py  test_m7b_beat_dispatch.py
docs/: RPIM-Blueprint-Web.html  RPIM-Blueprint-v1.2.md  RPIM-User-Guide-Web.html  RPIM-User-Guide.md
docs/decisions/: 0001-uv-workspace-python312.md  0002-secrets-bootstrap-env-init.md  0003-ports-exposure-compose-names.md  0004-ci-smoke-as-m0-acceptance.md  0005-workers-health-contract.md  0006-pgvector-init-boundary.md  0007-coolify-deploy-path.md  0008-m1-identity-tenancy.md  0009-m1-dashboard-ui.md  0010-m2-brain-slice-a.md  0011-m2-slice-b-real-embeddings.md  0023-data-export.md  (+39 more)
infra/: coolify-uuids.conf  coolify-uuids.env  docker-compose.iran.yml  docker-compose.us.yml
scripts/: backup.sh  coolify-provision.sh  crossleg-healthcheck.sh  ops-diagnose.sh  print-coolify-env.sh  restore-verify.sh  smoke-e2e.sh
(+48 files in other folders)
