[project]
name = "rpim-core-api"
version = "0.1.0"
description = "RPIM Core API — iran leg (dashboard backend, approval queue, tenants)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "rpim-shared",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pyjwt>=2.9",
    "bcrypt>=4.2",
    "email-validator>=2.2",
    "httpx>=0.27",
    "pgvector>=0.3",
    "pypdf>=5.0",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rpim_core_api"]

[tool.uv.sources]
rpim-shared = { workspace = true }
