[project]
name = "rpim-model-gateway"
version = "0.1.0"
description = "RPIM Model Gateway — us leg (T1-T5 routing lands in M3; M0 is skeleton only)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "rpim-shared",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rpim_model_gateway"]

[tool.uv.sources]
rpim-shared = { workspace = true }
