[project]
name = "rpim-renderer"
version = "0.1.0"
description = "RPIM Template Renderer — us leg (fake-mode core in M8; real Chromium in M8B)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "jinja2>=3.1",
    "rpim-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rpim_renderer"]

[tool.uv.sources]
rpim-shared = { workspace = true }
