[project]
name = "rpim-workers"
version = "0.1.0"
description = "RPIM Celery workers — cross-leg jobs (ingestion, publish, crawl land in M2+)"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rpim_workers"]
